tests/src/Loader/classloader/generics/Instantiation/Negative/abstract08.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_abstract08_abstract08_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract08_abstract08_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract08\\abstract08.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
